tests/async_without_return.stderr
error: function should return Result
 --> $DIR/async_without_return.rs:3:1
  |
3 | #[context("context")]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
